2007-11-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, itpp/base/math/misc.h, itpp/config_msvc.h:
	Clean up checks for finite(), isfinite() and isnan()

	isnan() is defined as a macro on some systems in <math.h>, so we
	should check for it. BTW, removed macro definition of finite(),
	which is also defined as inline function in
	"itpp/base/math/misc.h".

	* configure.ac.in: Removed duplicated checks

	AC_HEADER_STDC is invoked when AC_LANG([C++]) is used, whereas
	AC_PROG_MAKE_SET is executed by AM_INIT_AUTOMAKE.

	* m4/ac_cxx_extern_template.m4: Obsolete macros replaced with the
	ones recommended by autoconf

	AC_LANG_SAVE + AC_LANG_CPLUSPLUS  ->  AC_LANG_PUSH([C++])
	AC_LANG_RESTORE  ->  AC_LANG_POP([C++])
	AC_TRY_COMPILE  ->  AC_COMPILE_IFELSE + AC_LANG_PROGRAM

	* configure.ac.in, m4/acx_blas.m4, m4/acx_lapack.m4,
	m4/acx_fft.m4: Use AS_HELP_STRING macros instead of obsolete
	AC_HELP_STRING ones

	* Makefile.am, autogen.sh, configure.ac.in,
	m4/ac_cxx_extern_template.m4, m4/acx_blas.m4, m4/acx_lapack.m4,
	m4/acx_fft.m4: Renamed "config" directory to "m4" to reflect its
	contents

	* autogen.sh, configure.ac.in: Use "build-aux" directory for
	auxiliary building scripts

	This directory name is suggested in the autoconf manual as a
	standard placeholder for auxiliary build scripts. If this
	directory does not exist, create it before invoking autotools.

	* autogen.sh: On error return the exit code of the failing command

	* autogen.sh: Allow runing autogen.sh using an absolute path

	After checking the necessary tools the script now enters the
	IT++ source directory for the bootstrap process.

	* configure.ac.in: Report all automake warnings and treat them as
	errors

	This should give the maintainer and people building IT++ from SVN
	a better detection of possible bugs in Makefiles.

2007-11-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, tests/Makefile.am: Bump autoconf requirement to
	2.60 and use AC_PROG_SED
